--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -7,6 +7,7 @@
     <f:event type="preRenderView" listener="#{loginBean.checkAuthentication}" />
     <h:head>
         <title>Bienvenido a CEV :: Ingreso</title>
+        <link rel="icon" type="image/png" href="images/utils/bug-siloutte.png" />
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <link href="css/default.css" rel="stylesheet"/>
     </h:head>
