--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -5,33 +5,132 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <title>CEV :: Administración</title>
+        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+        <meta name="viewport" content="width=device-width" />
+        <link rel="icon" type="image/png" href="../images/utils/bug-siloutte.png" />
+        <link href="light-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="light-bootstrap/css/animate.min.css" rel="stylesheet"/>
+        <link href="light-bootstrap/css/light-bootstrap-dashboard.css" rel="stylesheet"/>
+        <link href="light-bootstrap/css/pe-icon-7-stroke.css" rel="stylesheet" />
+        <link href="../css/default.css" rel="stylesheet" />
+    </head>
+    <body>
+        <h:form>
+            <div class="wrapper">
+                <div class="sidebar" data-color="green" data-image="../images/sidebar-bee.png">
+                    <div class="sidebar-wrapper">
+                        <div class="logo">
+                            <a class="simple-text">
+                                <img src="../images/utils/bug-contour.png" class="logo-dashboard img-responsive"/>
+                                COLECCIÓN ENTOMOLÓGICA VIRTUAL
+                            </a>
+                        </div>
+                        <ul class="nav">
+                            <li class="active">
+                                <a href="dashboard.html">
+                                    <i class="pe-7s-graph"></i>
+                                    <p>Dashboard</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="table.html">
+                                    <i class="pe-7s-note2"></i>
+                                    <p>Table List</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="typography.html">
+                                    <i class="pe-7s-news-paper"></i>
+                                    <p>Typography</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="icons.html">
+                                    <i class="pe-7s-science"></i>
+                                    <p>Icons</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="maps.html">
+                                    <i class="pe-7s-map-marker"></i>
+                                    <p>Maps</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="notifications.html">
+                                    <i class="pe-7s-bell"></i>
+                                    <p>Notifications</p>
+                                </a>
+                            </li>
+                            <li class="active-pro">
+                                <a href="upgrade.html">
+                                    <i class="pe-7s-rocket"></i>
+                                    <p>Upgrade to PRO</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 
-    <f:view contentType="text/html">
-        <h:head>
-            <h:outputStylesheet library="assets/css" name="bootstrap.min.css" />
-            <h:outputStylesheet library="assets/css" name="animate.min.css" />
-            <h:outputStylesheet library="assets/css" name="pe-icon-7-stroke.css" />
-            <h:outputStylesheet library="assets/css" name="demo.css" />
-            <h:outputStylesheet library="css" name="pstyle.css" />
-            <h:outputScript library="js" name="es_locale.js"/>
-        </h:head>
-        <h:body>
-            <p:layout fullPage="true">
-                <p:layoutUnit position="north" size="50" resizable="true" closable="true" collapsible="true">
-                    <h:outputText value="Bienvenido Administrador"/>
-                    <ui:insert name="title"/>                
-                </p:layoutUnit>
+                <div class="main-panel">
+                    <nav class="navbar navbar-default navbar-fixed">
+                        <div class="container-fluid">
+                            <div class="navbar-header">
+                                <a class="navbar-brand" href="#">
+                                    <small>Bienvenido, </small><strong>#{loginBean.users.userNames} #{loginBean.users.userLastnames}</strong>
+                                </a>
+                            </div>
+                            <div class="collapse navbar-collapse">
+                                <ul class="nav navbar-nav navbar-right">
+                                    <li>
+                                        <a href="">
+                                            <i class="pe-7s-user"></i>
+                                            <strong>Perfil de Usuario</strong>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <h:commandLink action="#{loginBean.logOut()}">
+                                            <i class="pe-7s-close-circle"></i>
+                                            <strong>Salir de C.E.V</strong>
+                                        </h:commandLink>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </nav>
+                    <div class="content">
+                        <div class="container-fluid">
 
-                <p:layoutUnit position="west" size="175" header="Menu Principal" collapsible="true">
-                    <h:form>
-                        
-                    </h:form>
-                </p:layoutUnit>
-
-                <p:layoutUnit position="center">
-                    <ui:insert name="body"/>
-                </p:layoutUnit>
-            </p:layout>
-        </h:body>
-    </f:view>
+                        </div>
+                    </div>
+                    <footer class="footer">
+                        <div class="container-fluid">
+                            <nav class="pull-left">
+                                <ul>
+                                    <li>
+                                        <a href="#">
+                                            Acerca de la C.E.V
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                            <p class="copyright pull-right">
+                                &#169; 2017 Colección Entomológica Virtual - Universidad Central
+                            </p>
+                        </div>
+                    </footer>
+                </div>
+            </div>
+        </h:form>
+    </body>
+    <script src="light-bootstrap/js/jquery-1.10.2.js" type="text/javascript"></script>
+    <script src="light-bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="light-bootstrap/js/bootstrap-checkbox-radio-switch.js"></script>
+    <script src="light-bootstrap/js/chartist.min.js"></script>
+    <script src="light-bootstrap/js/bootstrap-notify.js"></script>
+    <script src="light-bootstrap/js/light-bootstrap-dashboard.js"></script>
 </html>
