Aplicacion del logo de la aplicacion

--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:h="http://java.sun.com/jsf/html">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <title>CEV :: Administración</title>
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
         <meta name="viewport" content="width=device-width" />
-        <link rel="icon" type="image/png" href="../images/utils/bug-siloutte.png" />
+        <link rel="icon" type="image/png" href="../images/utils/bug-silhouette-dark.png" />
         <link href="light-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
         <link href="light-bootstrap/css/animate.min.css" rel="stylesheet"/>
         <link href="light-bootstrap/css/light-bootstrap-dashboard.css" rel="stylesheet"/>
@@ -25,7 +22,7 @@
                     <div class="sidebar-wrapper">
                         <div class="logo">
                             <a class="simple-text">
-                                <img src="../images/utils/bug-contour.png" class="logo-dashboard img-responsive"/>
+                                <img src="../images/utils/bug-silhouette-light.png" class="logo-dashboard img-responsive"/>
                                 COLECCIÓN ENTOMOLÓGICA VIRTUAL
                             </a>
                         </div>
