--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="description" content=""/>
         <meta name="author" content=""/>
-        <link rel="icon" type="image/png" href="images/utils/bug-siloutte.png" />
+        <link rel="icon" type="image/png" href="../images/utils/bug-silhouette-dark.png" />
         <link href="bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet"/>
         <link href="css/default.css" type="text/css" rel="stylesheet" />
     </head>
