Finalizacion de Aplicacion del logo de la aplicacion

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="description" content=""/>
         <meta name="author" content=""/>
-        <link rel="icon" type="image/png" href="../images/utils/bug-silhouette-dark.png" />
+        <link rel="icon" type="image/png" href="images/utils/bug-silhouette-dark.png" />
         <link href="bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet"/>
         <link href="css/default.css" type="text/css" rel="stylesheet" />
     </head>
@@ -27,6 +27,9 @@
         </nav>
         <nav class="navbar" role="navigation" style="padding-top: 50px;">
             <div class="container" style="text-align: center;">
+                <div class="logo-dashboard">
+                    <img src="images/utils/bug-contour-dark.png" class="logo-dashboard img-responsive"/>
+                </div>
                 <h1 class="bs-docs-featurette-title">COLECCION ENTOMOLÓGICA VIRTUAL</h1>
                 <hr/>
                 <p>Colección Entomológica del Centro de Biosistemas de la Universidad Jorge Tadeo Lozano.</p>
