Implementación de la marca de agua Boton de asistente de creación flotante Configuración de la tabla MODULES para añadir iconos y vistas xhtml

--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -16,7 +16,10 @@
         <link href="../css/default.css" rel="stylesheet" />
     </head>
     <body>
-        <h:form>
+        <h:form id="menuForm">
+            <h:commandLink id="new-specimen" styleClass="new-specimen" value="" title="Agregar un nuevo espécimen">
+                <img src="../images/utils/bug-silhouette-light.png" class="img-responsive"/>
+            </h:commandLink>
             <div class="wrapper">
                 <div class="sidebar" data-color="green" data-image="../images/sidebar-bee.png">
                     <div class="sidebar-wrapper">
@@ -33,6 +36,7 @@
                                     <p>Dashboard</p>
                                 </a>
                             </li>
+                            <li class="seccion">Prueba</li>
                             <li>
                                 <a href="table.html">
                                     <i class="pe-7s-note2"></i>
@@ -100,24 +104,51 @@
                         </div>
                     </nav>
                     <div class="content">
+                        <img src="../images/utils/bug-silhouette-dark.png" class="watermark img-responsive"/>
                         <div class="container-fluid">
-
+                            <div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div>
+                            <div class="col-md-12">Something else</div>
+                            <div class="col-md-12">Something more..</div>
+                            <div class="col-md-12">Something at the end</div>
                         </div>
                     </div>
                     <footer class="footer">
                         <div class="container-fluid">
                             <nav class="pull-left">
-                                <ul>
-                                    <li>
-                                        <a href="#">
-                                            Acerca de la C.E.V
-                                        </a>
-                                    </li>
-                                </ul>
+                                <p class="copyright pull-right">
+                                    &#169; 2017 Colección Entomológica Virtual - Universidad Central
+                                </p>
                             </nav>
-                            <p class="copyright pull-right">
-                                &#169; 2017 Colección Entomológica Virtual - Universidad Central
-                            </p>
                         </div>
                     </footer>
                 </div>
@@ -128,6 +159,7 @@
     <script src="light-bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="light-bootstrap/js/bootstrap-checkbox-radio-switch.js"></script>
     <script src="light-bootstrap/js/chartist.min.js"></script>
+    <script src="light-bootstrap/js/main.js"></script>
     <script src="light-bootstrap/js/bootstrap-notify.js"></script>
     <script src="light-bootstrap/js/light-bootstrap-dashboard.js"></script>
 </html>
