--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -24,59 +26,29 @@
                 <div class="sidebar" data-color="green" data-image="../images/sidebar-bee.png">
                     <div class="sidebar-wrapper">
                         <div class="logo">
-                            <a class="simple-text">
+                            <h:outputLink value="index.xhtml" styleClass="simple-text">
                                 <img src="../images/utils/bug-silhouette-light.png" class="logo-dashboard img-responsive"/>
                                 COLECCIÓN ENTOMOLÓGICA VIRTUAL
-                            </a>
+                            </h:outputLink>
                         </div>
                         <ul class="nav">
-                            <li class="active">
-                                <a href="dashboard.html">
-                                    <i class="pe-7s-graph"></i>
-                                    <p>Dashboard</p>
-                                </a>
-                            </li>
-                            <li class="seccion">Prueba</li>
-                            <li>
-                                <a href="table.html">
-                                    <i class="pe-7s-note2"></i>
-                                    <p>Table List</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="typography.html">
-                                    <i class="pe-7s-news-paper"></i>
-                                    <p>Typography</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="icons.html">
-                                    <i class="pe-7s-science"></i>
-                                    <p>Icons</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="maps.html">
-                                    <i class="pe-7s-map-marker"></i>
-                                    <p>Maps</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="notifications.html">
-                                    <i class="pe-7s-bell"></i>
-                                    <p>Notifications</p>
-                                </a>
-                            </li>
-                            <li class="active-pro">
-                                <a href="upgrade.html">
-                                    <i class="pe-7s-rocket"></i>
-                                    <p>Upgrade to PRO</p>
-                                </a>
-                            </li>
+                            <ui:repeat id="userMenu" value="#{loginBean.userModules}" var="module">
+                                <li class="#{module.idContainer == null? 'seccion' : ''}">
+                                    <ui:fragment rendered="#{module.modulePage == null}">
+                                        <i class="#{module.moduleIcon}"></i>
+                                        <p>#{module.moduleName}</p>
+                                    </ui:fragment>
+                                    <ui:fragment rendered="#{module.modulePage != null}">
+                                        <h:outputLink value="#{module.modulePage}">
+                                            <i class="#{module.moduleIcon}"></i>
+                                            <p>#{module.moduleName}</p>
+                                        </h:outputLink>
+                                    </ui:fragment>
+                                </li>
+                            </ui:repeat>
                         </ul>
                     </div>
                 </div>
-
                 <div class="main-panel">
                     <nav class="navbar navbar-default navbar-fixed">
                         <div class="container-fluid">
