--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:c="http://java.sun.com/jsp/jstl/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -18,11 +18,11 @@
         <link href="../css/default.css" rel="stylesheet" />
     </head>
     <body>
-        <h:form id="menuForm">
-            <h:commandLink id="new-specimen" styleClass="new-specimen" value="" title="Agregar un nuevo espécimen">
-                <img src="../images/utils/bug-silhouette-light.png" class="img-responsive"/>
-            </h:commandLink>
-            <div class="wrapper">
+        <div class="wrapper">
+            <h:form id="menuForm">
+                <h:commandLink id="new-specimen" styleClass="new-specimen" value="" title="Agregar un nuevo espécimen">
+                        <img src="../images/utils/bug-silhouette-light.png" class="img-responsive"/>
+                    </h:commandLink>
                 <div class="sidebar" data-color="green" data-image="../images/sidebar-bee.png">
                     <div class="sidebar-wrapper">
                         <div class="logo">
@@ -39,17 +39,19 @@
                                         <p>#{module.moduleName}</p>
                                     </ui:fragment>
                                     <ui:fragment rendered="#{module.modulePage != null}">
-                                        <h:outputLink value="#{module.modulePage}">
+                                        <h:commandLink value="#{module.moduleName}">
+                                            <f:setPropertyActionListener value="#{module.modulePage}" target="#{navigationBean.navigablePage}"/>
                                             <i class="#{module.moduleIcon}"></i>
-                                            <p>#{module.moduleName}</p>
-                                        </h:outputLink>
+                                        </h:commandLink>
                                     </ui:fragment>
                                 </li>
                             </ui:repeat>
                         </ul>
                     </div>
                 </div>
-                <div class="main-panel">
+            </h:form>
+            <div class="main-panel">
+                <h:form id="logoutForm">
                     <nav class="navbar navbar-default navbar-fixed">
                         <div class="container-fluid">
                             <div class="navbar-header">
@@ -75,63 +77,31 @@
                             </div>
                         </div>
                     </nav>
-                    <div class="content">
-                        <img src="../images/utils/bug-silhouette-dark.png" class="watermark img-responsive"/>
-                        <div class="container-fluid">
-                            <div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div><div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div>
-                            <div class="col-md-12">Something else</div>
-                            <div class="col-md-12">Something more..</div>
-                            <div class="col-md-12">Something at the end</div>
-                        </div>
+                </h:form>
+                <div class="content">
+                    <img src="../images/utils/bug-silhouette-dark.png" class="watermark img-responsive"/>
+                    <div class="container-fluid">
+                        <ui:fragment rendered="#{navigationBean.pageReady}">
+                            <ui:include src="#{navigationBean.navigablePage}" />
+                        </ui:fragment>
                     </div>
-                    <footer class="footer">
-                        <div class="container-fluid">
-                            <nav class="pull-left">
-                                <p class="copyright pull-right">
-                                    &#169; 2017 Colección Entomológica Virtual - Universidad Central
-                                </p>
-                            </nav>
-                        </div>
-                    </footer>
                 </div>
+                <footer class="footer">
+                    <div class="container-fluid">
+                        <nav class="pull-left">
+                            <p class="copyright pull-right">
+                                &#169; 2017 Colección Entomológica Virtual - Universidad Central
+                            </p>
+                        </nav>
+                    </div>
+                </footer>
             </div>
-        </h:form>
+        </div>
     </body>
     <script src="light-bootstrap/js/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="light-bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="light-bootstrap/js/bootstrap-checkbox-radio-switch.js"></script>
     <script src="light-bootstrap/js/chartist.min.js"></script>
-    <script src="light-bootstrap/js/main.js"></script>
     <script src="light-bootstrap/js/bootstrap-notify.js"></script>
     <script src="light-bootstrap/js/light-bootstrap-dashboard.js"></script>
 </html>
