Ajuste de librerias JavaScript Ajuste de JquerySteps

--- a/src/main/webapp/admin/wizard.xhtml
+++ b/src/main/webapp/admin/wizard.xhtml
@@ -4,8 +4,7 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:outputScript library="js" name="jquery-2.2.3.min.js"/>
-    <h:outputScript library="js" name="jquery.steps.js"/>
-    <h:outputScript library="js" name="main.js"/>
+    <h:outputScript library="js" name="main.js?v=1" />
     <h:body>
         <h:form id="specimenForm">
             <h3>Bienvenido a Fertitom</h3>
@@ -14,15 +13,15 @@
             </section>
             <h3>ASDASD</h3>
             <section style="width:100%">
-                <p>HOLA_1</p>
+                <p>HOLA_2</p>
             </section>
             <h3>ASASDF</h3>
             <section style="width:100%">
-                <p>HOLA_1</p>
+                <p>HOLA_3</p>
             </section>
             <h3>ASGASDF</h3>
             <section style="width:100%">
-                <p>HOLA_1</p>
+                <p>HOLA_4</p>
             </section>
         </h:form>
     </h:body>
