--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -16,6 +16,7 @@
         <link href="light-bootstrap/css/light-bootstrap-dashboard.css" rel="stylesheet"/>
         <link href="light-bootstrap/css/pe-icon-7-stroke.css" rel="stylesheet" />
         <link href="../css/default.css" rel="stylesheet" />
+        <link href="../css/jquery.steps.css" rel="stylesheet" />
     </head>
     <body>
         <div class="wrapper">
@@ -104,4 +105,6 @@
     <script src="light-bootstrap/js/chartist.min.js"></script>
     <script src="light-bootstrap/js/bootstrap-notify.js"></script>
     <script src="light-bootstrap/js/light-bootstrap-dashboard.js"></script>
+    <script src="../js/jquery.steps.js"></script>
+    <script src="../js/jquery.validate.min.js"></script>
 </html>
