--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <head>
+    <h:head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <title>CEV :: Administración</title>
@@ -17,8 +17,8 @@
         <link href="light-bootstrap/css/pe-icon-7-stroke.css" rel="stylesheet" />
         <link href="../css/default.css" rel="stylesheet" />
         <link href="../css/jquery.steps.css" rel="stylesheet" />
-    </head>
-    <body>
+    </h:head>
+    <h:body>
         <div class="wrapper">
             <h:form id="menuForm">
                 <h:commandLink id="new-specimen" styleClass="new-specimen" value="" title="Agregar un nuevo espécimen">
@@ -98,8 +98,7 @@
                 </footer>
             </div>
         </div>
-    </body>
-    <script src="light-bootstrap/js/jquery-1.10.2.js" type="text/javascript"></script>
+    </h:body>
     <script src="light-bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="light-bootstrap/js/bootstrap-checkbox-radio-switch.js"></script>
     <script src="light-bootstrap/js/chartist.min.js"></script>
