--- a/src/main/webapp/admin/specimen.xhtml
+++ b/src/main/webapp/admin/specimen.xhtml
@@ -4,7 +4,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core">
     <h:form id="formSpecimen">
-        <h:dataTable id="dataTableSpecimen" value="#{specimenBean.allSpecimens}" var="specimen" styleClass="table table-hover table-full-width">
+        <h:dataTable id="dataTableSpecimen" value="#{specimenBean.allSpecimens}" var="specimen" styleClass="table table-hover table-full-width table-condensed">
             <h:column>
                 <f:facet name="header">Nombre Científico</f:facet>
                 <h:outputText value="#{specimen.idTaxonomy.taxonomyName} #{specimen.specificEpithet}" />
@@ -27,45 +27,48 @@
             </h:column>
             <h:column>
                 <f:facet name="header">Acciones</f:facet>
-                <p:commandButton id="viewButton" icon="ui-icon-zoomin" oncomplete="PF('specimenDetail').show()" update=":specimenDetailForm" title="Ficha técnica de #{specimen.commonName}" actionListener="#{specimenBean.setSpecimen(specimen)}"/>
-                <p:commandButton id="editButton" icon="ui-icon-pencil" oncomplete="PF('specimenWizard').show()" update=":formDialog :specimenWizardForm" title="Editar #{specimen.commonName}" actionListener="#{specimenBean.prepareUpdate(specimen)}">
-                    <f:actionListener binding="#{locationBean.selectNodeFromId(specimen.idLocation.idLocation)}" />
-                    <f:actionListener binding="#{taxonomyBean.selectNodeFromId(specimen.idTaxonomy.idTaxonomy)}" />
-                </p:commandButton>
-                <p:commandButton id="deleteButton" icon="ui-icon-trash" oncomplete="PF('specimenDelete').show()" title="Eliminar #{specimen.commonName}" actionListener="#{specimenBean.setSpecimen(specimen)}"/>
+                <p:commandLink id="viewButton" class="btn btn-default btn-sm btn-action" oncomplete="PF('specimenDetail').show()" update=":specimenDetailForm" title="Ficha técnica de #{specimen.commonName}" actionListener="#{specimenBean.setSpecimen(specimen)}">
+                    <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+                </p:commandLink>
+                <p:commandLink id="editButton" class="btn btn-default btn-sm btn-action" oncomplete="PF('specimenWizard').show()" update=":formDialog :specimenWizardForm" title="Editar #{specimen.commonName}" actionListener="#{specimenBean.prepareUpdate(specimen)}">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                </p:commandLink>
+                <p:commandLink id="deleteButton" class="btn btn-default btn-sm btn-action" oncomplete="PF('specimenDelete').show()" title="Eliminar #{specimen.commonName}" actionListener="#{specimenBean.setSpecimen(specimen)}">
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                </p:commandLink>
             </h:column>
         </h:dataTable>
-        <div>
+        <h:panelGroup id="paginator">
             <nav aria-label="Page navigation" class="paginador">
                 <ul class="pagination pagination-lg">
                     <li>
-                        <a href="#" aria-label="Previous">
-                            <span aria-hidden="true">Primero</span>
-                        </a>
+                        <p:commandLink id="first" title="Primera página" actionListener="#{specimenBean.firstPage()}" update="dataTableSpecimen, paginator">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        </p:commandLink>
                     </li>
                     <li>
-                        <a href="#" aria-label="Previous">
-                            <span aria-hidden="true">Atras</span>
-                        </a>
+                        <p:commandLink id="prev" title="Anterior página" actionListener="#{specimenBean.previousPage()}" update="dataTableSpecimen, paginator">
+                            <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
+                        </p:commandLink>
                     </li>
-                    <li><a href="#" class="active-page">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
+                    <ui:repeat id="pager" var="i" value="#{specimenBean.pages}">
+                        <li>
+                            <p:commandLink id="pageNumer" actionListener="#{specimenBean.getPageResults(i)}" class="#{specimenBean.currentPage == i? 'active-page': ''}" update="formSpecimen:paginator, formSpecimen:dataTableSpecimen">#{i}</p:commandLink>
+                        </li>
+                    </ui:repeat>
                     <li>
-                        <a href="#" aria-label="Next">
-                            <span aria-hidden="true">Adelante</span>
-                        </a>
+                        <p:commandLink id="next" title="Siguiente página" actionListener="#{specimenBean.nextPage()}" update="dataTableSpecimen, paginator">
+                            <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+                        </p:commandLink>
                     </li>
                     <li>
-                        <a href="#" aria-label="Previous">
-                            <span aria-hidden="true">Ultimo</span>
-                        </a>
+                        <p:commandLink id="last" title="Última página" actionListener="#{specimenBean.lastPage()}" update="dataTableSpecimen, paginator">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        </p:commandLink>
                     </li>
                 </ul>
             </nav>
-        </div>
+        </h:panelGroup>
         <p:growl id="messages" showDetail="true"/>
     </h:form>
 
