Reenlace con Location y Taxonomy Cambios de estilos Arreglo de DBService

--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -89,7 +89,7 @@
                 </h:form>
                 <div class="content">
                     <img src="../images/utils/bug-silhouette-dark.png" class="watermark img-responsive"/>
-                    <div class="container-fluid">
+                    <div class="container-fluid" style="height: 100%;">
                         <ui:fragment rendered="#{navigationBean.pageReady}">
                             <ui:include src="#{navigationBean.navigablePage}" />
                         </ui:fragment>
