--- a/src/main/webapp/admin/wizard.xhtml
+++ b/src/main/webapp/admin/wizard.xhtml
@@ -3,7 +3,7 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <h:outputScript library="js" name="main.js?v=1" />
+    <h:outputScript library="js" name="main.js" />
     <h:body>
         <h:form id="specimenForm">
             <h3>Bienvenido a Fertitom</h3>
